testsuite/tests/parser/should_fail/readFail001.stderr

readFail001.hs:25:11: error:
    The fixity signature for ‘+#’ lacks an accompanying binding

readFail001.hs:38:32: error:
    Not in scope: type constructor or class ‘Leaf’
    Suggested fix:
      Perhaps you intended to use DataKinds
      to refer to the data constructor of that name?

readFail001.hs:38:41: error:
    Not in scope: type constructor or class ‘Leaf’
    Suggested fix:
      Perhaps you intended to use DataKinds
      to refer to the data constructor of that name?

readFail001.hs:107:30: error: Not in scope: data constructor ‘Foo’

readFail001.hs:107:42: error: Not in scope: data constructor ‘Bar’

readFail001.hs:112:23: error:
    Not in scope: type constructor or class ‘Foo’
